--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "synth": "npm run build && cdk synth",
-    "test": "npm run build && tap",
+    "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 npm run build && tap",
     "prepare": "husky install"
   },
   "devDependencies": {
