--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "synth": "npm run build && cdk synth",
-    "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 npm run build && tap",
+    "test": "npm run build && tap test/utils/github.test.js",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -37,6 +37,7 @@
     "@octokit/auth-app": "^4.0.7",
     "@octokit/core": "^4.1.0",
     "@octokit/plugin-paginate-rest": "^5.0.1",
+    "@probot/get-private-key": "^1.1.1",
     "@slack/bolt": "^3.12.2",
     "aws-cdk": "2.53.0",
     "aws-cdk-lib": "2.54.0",
