--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "devDependencies": {
     "@istanbuljs/esm-loader-hook": "^0.2.0",
-    "aws-cdk": "2.54.0",
+    "aws-cdk": "2.55.1",
     "aws-sdk-mock": "^5.8.0",
-    "esbuild": "^0.16.2",
+    "esbuild": "^0.16.10",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -40,11 +40,12 @@
     "@slack/bolt": "^3.12.2",
     "aws-cdk-lib": "2.54.0",
     "aws-sdk": "^2.1270.0",
-    "constructs": "^10.1.183",
+    "constructs": "^10.1.195",
     "env-schema": "^5.2.0",
     "fluent-json-schema": "^4.0.0",
     "googleapis": "^109.0.1",
-    "pino": "^8.7.0"
+    "https-pem": "^3.0.0",
+    "pino": "^8.8.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
